# miniclaw

./: COALESCE_ECHO_GUARD_README.md  COMPACT_LOVELEDGER_README.md  DEEPSEEK_IMAGE_URL_400_FIX_README.md  DEEPSEEK_THINKING_ENABLED_README.md  DEEPSEEK_THINKING_EXACT_FIX_README.md  DEEPSEEK_THINKING_PAYLOAD_FINAL_README.md  DEEPSEEK_THINKING_SAFE_README.md  DIAGNOSE_DEEPSEEK_400_README.md  DYNAMIC_PERSONALITY_GATE_README.md  DYNAMIC_SPEAKER_WEIGHT_DECAY_README.md  EDITABLE_CARDS_UI_README.md  EMOTE_REPEAT_AND_POOL_README.md  FAST_EMOTE_BURST_README.md  FIX_AT_VISION_EMOTE_VARIETY_README.md  FIX_EMOTE_DIVERSITY_NO_RECENT_AVOID_README.md  FIX_EMOTE_FAST_TRIGGER_DEBUG_README.md  FIX_FRAGMENT_AND_STICKER_TEXT_README.md  FIX_HUMAN_VISUAL_REPLY_README.md  FIX_ORPHAN_GUIDE_BLOCK_README.md  FIX_PLAIN_IMAGE_REPEAT_NOT_EMOTE_README.md  FIX_POKE_AT_SEGMENT_README.md  FIX_PROACTIVE_AND_REPEAT_TUNE_README.md  FIX_RESTORE_GUIDE_NAMEERROR_README.md  FIX_RESTORE_GUIDE_SAFE_README.md  FIX_SELF_PROFILE_BLOCK_README.md  FIX_SELF_PROFILE_BLOCK_V2_README.md  FIX_THREADING_EMOTE_SEND_FIX2_README.md  FIX_THREADING_EMOTE_SEND_README.md  FIX_VISION_VISIBLE_DEBUG_README.md  GATE_PARSE_AND_NO_SPEECH_FIX_README.md  GROUP_RELEVANCE_FREQUENCY_FIX_README.md  HUMAN_SOCIAL_GATE_README.md  IGNORE_AT_OTHERS_README.md  IMAGE_GUARD_AND_POKE_AT_README.md  IMAGE_PROMPT_PIPELINE_FIX_README.md  IMAGE_TIMING_CONFIDENCE_FIX_README.md  LOVELEDGER_UI_README.md  MEMORY_CHAIN_FIX_README.md  NO_IMAGE_PROMPT_LEAK_FIX_README.md  POKE_REPLY_README.md  (+70 more)
src/: README.md
tests/: README.md  test_agent_flow.py  test_qq_tool.py  (+7 more)
(+99 files in other folders)
