[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawmini"
version = "0.1.0"
description = "Clawmini：一个具备 ReAct 与工具调用能力的迷你智能体架构"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Clawmini Team" }]
dependencies = [
  "pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
